<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Catalog</string>
    <string name="action_settings">Settings</string>
    <string name="action_checkout">Checkout</string>
    <string name="action_my_cart">My Cart</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_filter">Filter</string>
    <string name="filter_android">Android</string>
    <string name="filter_mobile">Java</string>
    <string name="filter_java">Mobile</string>
    <string name="results_found">Results found: <b>%s</b></string>
    <string name="results_not_found">Results not found: <b>%s</b></string>
    <string name="top_sellers">Top Sellers</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="off">10% Off</string>
    <string name="drawer_open">Catalog</string>
    <string name="drawer_close">Catalog</string>

    <string-array name="drawer_options">
        <item>Front End</item>
        <item>Games</item>
        <item>Java</item>
        <item>Mobile</item>
        <item>Web Development</item>
    </string-array>
    <string-array name="spinner_options">
        <item>Top Sellers</item>
        <item>New Arrivals</item>
        <item>10% Off</item>
    </string-array>
</resources>