<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.asd.MainActivity" >
    
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/action_filter_android"
                    android:title="@string/filter_android"/>
                <item
                    android:id="@+id/action_filter_mobile"
                    android:title="@string/filter_mobile"/>
                <item
                    android:id="@+id/action_filter_java"
                    android:title="@string/filter_java"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:title="@string/action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_checkout"
        android:icon="@drawable/ic_action_cart"
        android:title="@string/action_my_cart"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>